--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,8 @@
 
 body{
     box-sizing: border-box;
-    background-color: antiquewhite;
+    /* background-color: antiquewhite; */
+    background-color: #DDC3C3;
 }
 
 
@@ -17,8 +18,10 @@ body{
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     top: 25vh;
     left: 70vh;
-    background-color: rgb(203, 202, 216);
-    border: 2px outset rgb(143, 142, 142);
+    background-color:#A376A2;
+    border:  5px inset rgb(143, 142, 142);
+    /* background-color: rgb(203, 202, 216);
+    border: 2px outset rgb(143, 142, 142); */
     height: 500px;
     width: 500px;
    display: flex;
@@ -29,18 +32,19 @@ body{
 }
 
 button{
-    background-color: rgb(34, 216, 155);
-    border: dashed;
+    border: inset;
+    background-color :#8D5F8C;
+    /* background-color: rgb(34, 216, 155); */
     border-radius: 50%;
     height: 50px;
     width: 50px;
 }
 
 input{
-    background-color: rgb(34, 216, 155);
+    background-color:#6B3F69;
     padding: 5px;
     border: inset;
-  
+    color:#DDC3C3;
     height: 20px;
     width: 22px;
 }
